almost finished first two slides

--- a/index.html
+++ b/index.html
@@ -182,14 +182,14 @@ h2.history-text::after {
 	<header class="header">
 		<div class="container">
 			<div class="row">
-				<!--<div class="col-md-4 ">
+				<div class="col-md-4 ">
 					<div class="navbar-header">
 						<button type="button" class="navbar-toggle menu-button" data-toggle="collapse" data-target="#myNavbar">
 							<span class="glyphicon glyphicon-align-justify"></span>
 						</button>
-						<a class="navbar-brand logo" href="#">Super Smash Bros University</a>
+
 					</div>
-				</div> -->
+				</div>
 				<div class="col-md-offset-4 col-md-8">
 					<nav class="collapse navbar-collapse" id="myNavbar" role="navigation">
 						<ul class="nav navbar-nav navbar-right menu">
@@ -197,7 +197,7 @@ h2.history-text::after {
 							<li><a href="#section2" class="page-scroll">History</a></li>
 							<li><a href="#section3" class="page-scroll">Participate</a></li>
 							<li><a href="#section4" class="page-scroll">Photos</a></li>
-							<li><a href="#section5" class="page-scroll">Contact</a></li>
+							<li><a href="#section5" class="page-scroll">Sponsors</a></li>
 						</ul>
 					</nav>
 				</div>
@@ -226,11 +226,20 @@ h2.history-text::after {
 							<li><h4>Date:</h4> March 12, 2016</li>
 							<li><h4>Time:</h4> 10:00 AM</li>
 							<li><h4>Location:</h4> The Church at South Edmonton - 9910 67 Ave NW, T6E 0P5</li>
-							<li><h4>Game:</h4> Super Smash Bros. Melee</li>
+							<li>$15 entry fee per person minimum</li>
+							<li>$5 for venue</li>
+							<li>$10+ for donation</li>
 						</ul>
-					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lorem ipsum dolor sit amet, consectetur adipiscing elit.  Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lorem ipsum dolor sit amet,
-						consectetur adipiscing elit.  Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lorem ipsum dolor sit amet, consectetur adipiscing elit.  Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lorem ipsum dolor sit amet,
-						consectetur adipiscing elit.</p>
+
+						<div id="map-canvas" style="margin-left:250px;margin-right:250px;"></div>
+
+					</br>
+						<h2 class="text-center info-text">Events</h2>
+							<ul>
+								<li>Super Smash Bros. Melee Singles / Doubles</li>
+								<li>Edmonton VS Calgary Crew battle</li>
+								<li>For Fun Side Event (TBA)</li>
+							</ul>
 
 			</div>
 		</div>
@@ -243,74 +252,55 @@ h2.history-text::after {
 		<div class="container-fluid history" id="section2">
 			<div class="container">
 				<div class="row" id="starts">
-					<div class="col-md-12">
+					<div class="col-md-12 desc">
 						<h2 class="text-center history-text">History</h2>
-						<div class="col-md-6 col-sm-12 col-xs-12 icon-box">
-							<div class="col-md-2 col-sm-2 col-xs-12">
-								<div class="iconing">
-									<i class="glyphicon glyphicon-pencil"></i>
-								</div>
-							</div>
-							<div class="col-md-9 col-md-offset-1 col-sm-10 col-xs-12 icon-text-box">
-								<h4>Modern Design</h4>
-								<p>Lorem ipsum dolor sit amet, consectetur elit. Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-							</div>
-						</div>
-						<div class="col-md-6 col-sm-12 col-xs-12 icon-box">
-							<div class="col-md-2 col-sm-2 col-xs-12">
-								<div class="iconing">
-									<i class="glyphicon glyphicon-cog"></i>
-								</div>
-							</div>
-							<div class="col-md-9 col-md-offset-1 col-sm-10 col-xs-12 icon-text-box">
-								<h4>Easy To Customize</h4>
-								<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-							</div>
-						</div>
-						<div class="col-md-6 col-sm-12 col-xs-12 icon-box">
-							<div class="col-md-2 col-sm-2 col-xs-12">
-								<div class="iconing">
-									<i class="glyphicon glyphicon-time"></i>
-								</div>
-							</div>
-							<div class="col-md-9 col-md-offset-1 col-sm-10 col-xs-12 icon-text-box">
-								<h4>Save Time</h4>
-								<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lorem ipsum dolor sit amet, adipiscing elit.</p>
-							</div>
-						</div>
-						<div class="col-md-6 col-sm-12 col-xs-12 icon-box">
-							<div class="col-md-2 col-sm-2 col-xs-12">
-								<div class="iconing">
-									<i class="glyphicon glyphicon-briefcase"></i>
-								</div>
-							</div>
-							<div class="col-md-9 col-md-offset-1 col-sm-10 col-xs-12 icon-text-box">
-								<h4>Professional Work</h4>
-								<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lorem ipsum dolor sit amet, consectetur adipiscing elit consectetur adipiscing elit.</p>
-							</div>
-						</div>
-						<div class="col-md-6 col-sm-12 col-xs-12 icon-box">
-							<div class="col-md-2 col-sm-2 col-xs-12">
-								<div class="iconing">
-									<i class="glyphicon glyphicon-user"></i>
-								</div>
-							</div>
-							<div class="col-md-9 col-md-offset-1 col-sm-10 col-xs-12 icon-text-box">
-								<h4>User-friendly Interface</h4>
-								<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lorem ipsum dolor sit amet, consectetur adipiscing elit consectetur adipiscing elit.</p>
-							</div>
-						</div>
-						<div class="col-md-6 col-sm-12 col-xs-12 icon-box">
-							<div class="col-md-2 col-sm-2 col-xs-12">
-								<div class="iconing">
-									<i class="glyphicon glyphicon-heart"></i>
-								</div>
-							</div>
-							<div class="col-md-9 col-md-offset-1 col-sm-10 col-xs-12 icon-text-box">
-								<h4>Made With Love</h4>
-								<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lorem ipsum dolor sit amet, consectetur adipiscing.</p>
-							</div>
-						</div>
+
+							<p>Jarrett “Solaris” Bortscher was a talented Samus player and valued community member from Alberta, Canada who
+								had high-functioning autism and chronic catatonia. Despite these challenges, Jarrett always pushed himself to
+								excel in everything that he loved. Sadly, as Jarrett’s medical support began to dwindle upon reaching adulthood
+								and his catatonia began having more and more of an impact on his life, Jarrett took his own life two years ago in
+								September of 2012 at the age of 18 after a long fought battle with depression.</p>
+
+							</br>
+
+							<h3 class="text-center history-text">About Jarrett</h4>
+
+							<p>Those who are catatonic suffer from symptoms such as mutism, rigidity, and loss in motor skills. Despite his
+								inhibited motor skills, Jarrett was an incredibly talented break dancer and the most absurdly technical Samus
+								player here in the great north. Most people would just use Samus’ extender and her superwavedash to style, but
+								Solaris utilized them in tournament matches. If you were able to take a game off him, you get to choose between
+								letting him take you to Yoshi’s Story or to Pokemon Stadium, but either way you were setting yourself up to play a
+								game of Galaga. Although his Asperger’s impaired his speech, you could still see the glow and excitement in his
+								eyes when he landed an incredible combo or pulled off a clutch win. He was a smasher who exemplified the depths
+								of the human spirit despite incredible adversity.</p>
+
+							</br>
+
+							<p>Jarrett received proper medical support until he reached 18 and was released from the child care system at a local
+								hospital. Jarrett was waiting to transition into the adult psychiatric system, which was expected to take upwards to
+								two years. Unfortunately, Jarrett went missing on September 23, 2012 after not returning from a walk. There were
+								massive search parties with emergency crews, friends, and family. His body was later found in the North
+								Saskatchewan River three days later by emergency crews near a local bridge.</p>
+
+							</br>
+
+							<h3 class="text-center info-text">The Alberta Smash Community</h4>
+
+							<p>Although his loss is tragic, our community continues to gather annually not to mourn, but to celebrate Jarrett; we
+								celebrate the laughter and joy he shared with us over the 10 years he had been a part of our community, and the
+								warmth and inspiration that he has left behind. This year, the Alberta Smash Community is hosting Jarrett’s
+								Tournament 4 to raise awareness for autism and to raise awareness for services for those suffering from mental
+								health issues and depression (see end of article for further information). In addition, 100% of the proceeds raised
+								for Jarrett’s Tournament 4 will be donated to the Autism Society of Edmonton Area.</p>
+
+							</br>
+
+							<p>Jarrett was everything that made the smash community such an incredible community to be a part of. He was kind
+								hearted, enthusiastic, and, of course, fiercely competitive. He was a friend, a partner, and a rival. And when he left
+								he reminded us of how supportive and accepting the smash community is.</p>
+
+							</br>
+
 					</div>
 				</div>
 			</div>
@@ -342,7 +332,7 @@ h2.history-text::after {
 						</div>
 						<div class="col-md-8 col-md-offset-2 col-sm-offset-1 col-sm-9 col-xs-12 icon-text-box">
 							<h4>smash.gg</h4>
-							<p>Follow JT4 on the popular tournament tracker.</p>
+							<p>Preregister for JT4 on the popular tournament tracker.</p>
 						</div>
 					</div>
 					<div class="col-md-4 col-sm-12 col-xs-12 icon-box">
@@ -412,8 +402,8 @@ h2.history-text::after {
 		<div class="container">
 			<div class="row">
 				<div class="col-md-12">
-					<h2 class="text-center contact-text">Contact</h2>
-					<div class="col-md-6 col-sm-12 col-xs-12contact-form">
+					<h2 class="text-center contact-text">Sponsors</h2>
+					<!-- <div class="col-md-6 col-sm-12 col-xs-12contact-form">
 						<form role="form">
 							<div class="form-group">
 								<input type="text" class="form-control form-effect" id="name" placeholder="Name">
@@ -426,15 +416,15 @@ h2.history-text::after {
 							</div>
 							<button type="submit" class="btn btn-default btn-sub">Submit</button>
 						</form>
-					</div>
-					<div class="col-md-6 col-sm-12 col-xs-12 address-space">
-						<div id="map-canvas"></div>
+					</div> -->
+					<!-- <div class="col-md-6 col-sm-12 col-xs-12 address-space">
+
 						<div class="address">
 							<h3>Address</h3>
 							<p><i class="glyphicon glyphicon-map-marker"></i>The Church at South Edmonton,9910 67 ave NW,T6E 0P5 </p>
 							<p><i class="glyphicon glyphicon-envelope"></i>Info@example.com</p>
 						</div>
-					</div>
+					</div> -->
 				</div>
 			</div>
 		</div>
@@ -476,7 +466,7 @@ h2.history-text::after {
 		var mapCanvas = document.getElementById('map-canvas');
 		var mapOptions = {
 			center: new google.maps.LatLng(53.503698, -113.487486),
-			zoom: 12,
+			zoom: 17,
 			mapTypeId: google.maps.MapTypeId.ROADMAP
 		}
 		var map = new google.maps.Map(mapCanvas, mapOptions)
