--- a/index.html
+++ b/index.html
@@ -62,11 +62,6 @@ border: 2px solid magenta;
 	background: #8ab839;
 	padding: 0px 0px;
 }
-.thumbnail {
-	position: relative;
-	float: left;
-	width: 33.33333%;
-}
 
 #photos-maincaption h3 {
 	text-align: center;
@@ -156,7 +151,7 @@ h2.history-text::after {
 
 .thumbnail {
   display: block;
-  padding: 3px;
+  padding: 2px;
 	margin-bottom: 0px;
   line-height: 1.42857143;
   background-color: #8ab839;
@@ -399,20 +394,15 @@ h2.history-text::after {
 							<div class="col-md-12 col-sm-12 col-xs-12" id="photos-thumbnails">
 								<i>Loading thumbnails...</i>
 							</div>
-							<div class="col-md-12 col-sm-12 col-xs-12">
+							<!--<div class="col-md-12 col-sm-12 col-xs-12">
 								<p class="credit">Credits to Sekiya Photography unless stated otherwise</p>
-							</div>
+							</div>-->
 						</div>
 
 						<div class="col-md-8 col-sm-8 col-xs-8 photos-display">
 							<div id="photos-mainimage">
 								<i>Loading image...</i>
 							</div>
-						</div>
-					</div>
-
-					<div class="col-md-12 col-sm-12 col-xs-12">
-						<div class="col-md-offset-4 col-sm-offset-4 col-xs-offset-4 col-md-8 col-sm-8 col-xs-8">
 							<div id="photos-maincaption">
 								<h3><i>Loading caption...</i></h3>
 							</div>
@@ -582,7 +572,7 @@ h2.history-text::after {
 			else {
 				id = id + i;
 			}
-			photoarray = photoarray + "<div class=\"thumbnail\"><img src=\"images/image" + id + ".png\" /></div>";
+			photoarray = photoarray + "<div class=\"col-md-4 col-sm-6 col-xs-6 thumbnail\"><img src=\"images/image" + id + ".png\" /></div>";
 		}
 		$('#photos-thumbnails').html(photoarray);
 		updateImage("001");
