almost complete participate part

--- a/index.html
+++ b/index.html
@@ -49,7 +49,13 @@ border: 2px solid magenta;
 	max-height: 60px; /* 60 for 3-wide, 91 for 2-wide - probably don't need this if we just ensure all pictures have the same aspect ratio
 }
 */
-
+.reg-icon {
+	border-radius: 50%;
+	width: 90px;
+	height: 100px;
+	text-align:center;
+	border:3px solid white;
+}
 .twitchplayer iframe {
 	display: block;
 	margin-left: auto;
@@ -248,11 +254,14 @@ h2.history-text::after {
 						<div id="map-canvas" style="margin-left:250px;margin-right:250px;"></div>
 
 					</br>
+					<h1 style="text-align:center;">Important! Please Bring Your Own Controller!</h1>
+
 						<h2 class="text-center info-text">Events</h2>
 							<ul>
 								<li>Super Smash Bros. Melee Singles / Doubles</li>
 								<li>Edmonton VS Calgary Crew battle</li>
 								<li>For Fun Side Event (TBA)</li>
+								<li>$1 Raffles for prizes at the event!</li>
 							</ul>
 
 			</div>
@@ -304,8 +313,7 @@ h2.history-text::after {
 								celebrate the laughter and joy he shared with us over the 10 years he had been a part of our community, and the
 								warmth and inspiration that he has left behind. This year, the Alberta Smash Community is hosting Jarrett’s
 								Tournament 4 to raise awareness for autism and to raise awareness for services for those suffering from mental
-								health issues and depression (see end of article for further information). In addition, 100% of the proceeds raised
-								for Jarrett’s Tournament 4 will be donated to the Autism Society of Edmonton Area.</p>
+								health issues and depression. In addition, 100% of the proceeds raised for Jarrett’s Tournament 4 will be donated to the Autism Society of Edmonton Area.</p>
 
 							</br>
 
@@ -330,7 +338,7 @@ h2.history-text::after {
 					<div class="col-md-4 col-sm-12 col-xs-12 icon-box">
 						<div class="col-md-2 col-sm-2 col-xs-12">
 							<div class="iconing">
-								<i class="glyphicon glyphicon-pencil"></i>
+								<a href="https://www.facebook.com/events/1036431323065410/"><img class="reg-icon" src="images/fb.jpg"></img></a>
 							</div>
 						</div>
 						<div class="col-md-8 col-md-offset-2 col-sm-offset-1 col-sm-9 col-xs-12 icon-text-box">
@@ -341,7 +349,7 @@ h2.history-text::after {
 					<div class="col-md-4 col-sm-12 col-xs-12 icon-box">
 						<div class="col-md-2 col-sm-2 col-xs-12">
 							<div class="iconing">
-								<i class="glyphicon glyphicon-cog"></i>
+								<a href="http://www.smash.gg/jt4"><img class="reg-icon" src="images/smashgg.png"></img></a>
 							</div>
 						</div>
 						<div class="col-md-8 col-md-offset-2 col-sm-offset-1 col-sm-9 col-xs-12 icon-text-box">
@@ -352,7 +360,7 @@ h2.history-text::after {
 					<div class="col-md-4 col-sm-12 col-xs-12 icon-box">
 						<div class="col-md-2 col-sm-2 col-xs-12">
 							<div class="iconing">
-								<i class="glyphicon glyphicon-time"></i>
+								<img class="reg-icon" src="images/paypal.png"></img>
 							</div>
 						</div>
 						<div class="col-md-8 col-md-offset-2 col-sm-offset-1 col-sm-9 col-xs-12 icon-text-box">
