added preliminary sponsors section

--- a/index.html
+++ b/index.html
@@ -180,11 +180,10 @@ h2.history-text::after {
 	background: #b0e2ff;
 }
 
-.credit {
-	text-align: center;
-	font-style: italic;
+.logo_image {
 	width: 100%;
-	padding-top: 10px;
+	height: auto;
+	padding: 30px;
 }
 
 
@@ -442,6 +441,20 @@ h2.history-text::after {
 							<p><i class="glyphicon glyphicon-envelope"></i>Info@example.com</p>
 						</div>
 					</div> -->
+					<div class="col-md-12 col-sm-12 col-xs-12 desc">
+						<p>We would like to give a huge thank you to our sponsors below.</p>
+					</div>
+					<div class="col-md-12 col-sm-12 col-xs-12">
+						<div class="col-md-4 col-sm-6 col-xs-12"><img src="images/logo_intel.png" class="logo_image" /></div>
+						<div class="col-md-4 col-sm-6 col-xs-12"><img src="images/logo_intel.png" class="logo_image" /></div>
+						<div class="col-md-4 col-sm-6 col-xs-12"><img src="images/logo_intel.png" class="logo_image" /></div>
+					</div>
+
+					<div class="col-md-12 col-sm-12 col-xs-12 desc">
+						<p>We could always use more CRTs, gaming consoles, or raffle prizes!  If your corporation is interested
+							in being a sponsor for our event, please contact us at <a href="mailto:ssbuniversity@gmail.com">ssbuniversity@gmail.com</a></p>
+					</div>
+					</div>
 				</div>
 			</div>
 		</div>
