slight adjustments to sponsor page

--- a/index.html
+++ b/index.html
@@ -359,7 +359,7 @@ h2.history-text::after {
 						</div>
 						<div class="col-md-8 col-md-offset-2 col-sm-offset-1 col-sm-9 col-xs-12 icon-text-box">
 							<h4>Donate via Paypal</h4>
-							<p>Want to contribute to the cause but can't make it in person?</p>
+							<p>Want to contribute to the cause but can't make it in person? You can always donate without attending the event!</p>
 						</div>
 					</div>
 				</div>
@@ -367,8 +367,8 @@ h2.history-text::after {
 					<div class="col-xs-12 col-sm-12 col-md-12">
 						<div class="counter-item">
 							<i class="glyphicon glyphicon-user"></i>
-							<div class="timer" data-from="0" data-to="100" data-speed="5000" data-refresh-interval="50"></div>
-							<h5>Entrants For The Event</h5>
+							<div class="timer" data-from="0" data-to="177" data-speed="5000" data-refresh-interval="50"></div>
+							<h5>Entrants For The Event via Facebook</h5>
 						</div>
 					</div>
 				</div>
@@ -419,40 +419,19 @@ h2.history-text::after {
 			<div class="row">
 				<div class="col-md-12">
 					<h2 class="text-center contact-text">Sponsors</h2>
-					<!-- <div class="col-md-6 col-sm-12 col-xs-12contact-form">
-						<form role="form">
-							<div class="form-group">
-								<input type="text" class="form-control form-effect" id="name" placeholder="Name">
-							</div>
-							<div class="form-group">
-								<input type="email" class="form-control form-effect" id="email" placeholder="Email">
-							</div>
-							<div class="form-group">
-								<textarea type="textarea" class="form-control form-effect" id="text" placeholder="Message"></textarea>
-							</div>
-							<button type="submit" class="btn btn-default btn-sub">Submit</button>
-						</form>
-					</div> -->
-					<!-- <div class="col-md-6 col-sm-12 col-xs-12 address-space">
 
-						<div class="address">
-							<h3>Address</h3>
-							<p><i class="glyphicon glyphicon-map-marker"></i>The Church at South Edmonton,9910 67 ave NW,T6E 0P5 </p>
-							<p><i class="glyphicon glyphicon-envelope"></i>Info@example.com</p>
-						</div>
-					</div> -->
 					<div class="col-md-12 col-sm-12 col-xs-12 desc">
-						<p>We would like to give a huge thank you to our sponsors below.</p>
+						<p>We would like to give a huge thank you to our sponsors and donations below.</p>
 					</div>
 					<div class="col-md-12 col-sm-12 col-xs-12">
+						<!-- <div class="col-md-4 col-sm-6 col-xs-12"><img src="images/logo_intel.png" class="logo_image" /></div>
 						<div class="col-md-4 col-sm-6 col-xs-12"><img src="images/logo_intel.png" class="logo_image" /></div>
-						<div class="col-md-4 col-sm-6 col-xs-12"><img src="images/logo_intel.png" class="logo_image" /></div>
-						<div class="col-md-4 col-sm-6 col-xs-12"><img src="images/logo_intel.png" class="logo_image" /></div>
+						<div class="col-md-4 col-sm-6 col-xs-12"><img src="images/logo_intel.png" class="logo_image" /></div> -->
 					</div>
 
 					<div class="col-md-12 col-sm-12 col-xs-12 desc">
 						<p>We could always use more CRTs, gaming consoles, or raffle prizes!  If your corporation is interested
-							in being a sponsor for our event, please contact us at <a href="mailto:ssbuniversity@gmail.com">ssbuniversity@gmail.com</a></p>
+							in being a sponsor for our event, please contact us at <a href="mailto:info@4jarrett.me">info@4jarrett.me</a></p>
 					</div>
 					</div>
 				</div>
