--- a/index.html
+++ b/index.html
@@ -424,9 +424,16 @@ h2.history-text::after {
 						<p>We would like to give a huge thank you to our sponsors and donations below.</p>
 					</div>
 					<div class="col-md-12 col-sm-12 col-xs-12">
-						<!-- <div class="col-md-4 col-sm-6 col-xs-12"><img src="images/logo_intel.png" class="logo_image" /></div>
-						<div class="col-md-4 col-sm-6 col-xs-12"><img src="images/logo_intel.png" class="logo_image" /></div>
-						<div class="col-md-4 col-sm-6 col-xs-12"><img src="images/logo_intel.png" class="logo_image" /></div> -->
+
+						<div class="col-md-4 col-sm-6 col-xs-12">
+							<!-- <img src="images/logo_intel.png" class="logo_image" /> -->
+						</div>
+						<div class="col-md-4 col-sm-6 col-xs-12">
+							<img src="images/GDX.png" class="logo_image" />
+						</div>
+						<div class="col-md-4 col-sm-6 col-xs-12">
+							<!-- <img src="images/logo_intel.png" class="logo_image" /> -->
+						</div>
 					</div>
 
 					<div class="col-md-12 col-sm-12 col-xs-12 desc">
