added META tags

--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 	<title>Jarrett's Tournament 4</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta charset="UTF-8">
+	<meta name="description" content="Super Smash Bros University [SSBU] welcomes everyone to come to our fundraiser Smash Bros tournament for the Autism Society of Edmonton Area in memory of Jarrett Solaris Bortscher.">
+	<meta name="keywords" content="Jarrett's,Tournament,4,Jarrett,Super,Smash,Bros,Melee,Solaris,Bortscher">
+	<meta name="author" content="Simon Fessehaye,Michael Wong">
 
 	<link href="css/bootstrap.css" rel="stylesheet">
 	<link rel="stylesheet" href="style.css" type="text/css">
@@ -420,7 +424,7 @@ h2.history-text::after {
 				<div class="col-md-12">
 					<h2 class="text-center contact-text">Sponsors</h2>
 
-					<div class="col-md-12 col-sm-12 col-xs-12 desc">
+					<div class="col-md-12 col-sm-12 col-xs-12 desc text-center">
 						<p>We would like to give a huge thank you to our sponsors and donations below.</p>
 					</div>
 					<div class="col-md-12 col-sm-12 col-xs-12">
