--- a/index.html
+++ b/index.html
@@ -371,7 +371,7 @@ h2.history-text::after {
 					<div class="col-xs-12 col-sm-12 col-md-12">
 						<div class="counter-item">
 							<i class="glyphicon glyphicon-user"></i>
-							<div class="timer" data-from="0" data-to="177" data-speed="5000" data-refresh-interval="50"></div>
+							<div class="timer" data-from="0" data-to="181" data-speed="5000" data-refresh-interval="50"></div>
 							<h5>Entrants For The Event via Facebook</h5>
 						</div>
 					</div>
@@ -421,27 +421,40 @@ h2.history-text::after {
 	<div class="container-fluid contact" id="section5">
 		<div class="container">
 			<div class="row">
-				<div class="col-md-12">
+				<div class="col-md-12 desc">
 					<h2 class="text-center contact-text">Sponsors</h2>
 
 					<div class="col-md-12 col-sm-12 col-xs-12 desc text-center">
-						<p>We would like to give a huge thank you to our sponsors and donations below.</p>
+						<p style="text-align:center;">We would like to give a huge thank you to our sponsors and donations below.</p>
 					</div>
 					<div class="col-md-12 col-sm-12 col-xs-12">
 
 						<div class="col-md-4 col-sm-6 col-xs-12">
-							<!-- <img src="images/logo_intel.png" class="logo_image" /> -->
+							<img src="images/borz.jpg" class="logo_image" />
 						</div>
 						<div class="col-md-4 col-sm-6 col-xs-12">
 							<img src="images/GDX.png" class="logo_image" />
 						</div>
 						<div class="col-md-4 col-sm-6 col-xs-12">
-							<!-- <img src="images/logo_intel.png" class="logo_image" /> -->
+							<img src="images/maccraft.png" class="logo_image" />
 						</div>
 					</div>
 
+					<!-- <div class="col-md-12 col-sm-12 col-xs-12">
+
+						<div class="col-md-4 col-sm-6 col-xs-12">
+							<img src="images/logo_intel.png" class="logo_image" />
+						</div>
+						<div class="col-md-4 col-sm-6 col-xs-12">
+							<img src="images/borz.jpg" class="logo_image" />
+						</div>
+						<div class="col-md-4 col-sm-6 col-xs-12">
+							<img src="images/logo_intel.png" class="logo_image" />
+						</div>
+					</div> -->
+
 					<div class="col-md-12 col-sm-12 col-xs-12 desc">
-						<p>We could always use more CRTs, gaming consoles, or raffle prizes!  If your corporation is interested
+						<p style="text-align:center;">We could always use more CRTs, gaming consoles, or raffle prizes!  If your corporation is interested
 							in being a sponsor for our event, please contact us at <a href="mailto:info@4jarrett.me">info@4jarrett.me</a></p>
 					</div>
 					</div>
