--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@ border: 2px solid magenta;
 #photos-maincaption h3 {
 	text-align: center;
 	padding: 10px 0px 10px 0px;
-	font-size: 15px;
+	font-size: 17px;
 	float: left;
 	width: 100%;
 	font-weight: 600;
@@ -129,13 +129,13 @@ h2.info-text::after {
 	font-weight: 600;
 	text-transform: uppercase;
 	color: #000;
-	font-size: 14px;
+	font-size: 18px;
 }
 .desc ul {
 	width: 75%;
 	margin: 10px auto 20px auto;
 	font-family: 'Poppins', sans-serif;
-	font-size: 14px;
+	font-size: 18px;
 }
 .history
 {
@@ -211,11 +211,11 @@ h2.history-text::after {
 				<div class="col-md-offset-4 col-md-8">
 					<nav class="collapse navbar-collapse" id="myNavbar" role="navigation">
 						<ul class="nav navbar-nav navbar-right menu">
-							<li><a href="#page-top" class="page-scroll active">Event Info</a></li>
-							<li><a href="#section2" class="page-scroll">History</a></li>
-							<li><a href="#section3" class="page-scroll">Participate</a></li>
-							<li><a href="#section4" class="page-scroll">Photos</a></li>
-							<li><a href="#section5" class="page-scroll">Sponsors</a></li>
+							<li><a href="#event-info" class="page-scroll active">Event Info</a></li>
+							<li><a href="#history" class="page-scroll">History</a></li>
+							<li><a href="#participate" class="page-scroll">Participate</a></li>
+							<li><a href="#photos" class="page-scroll">Photos</a></li>
+							<li><a href="#sponsors" class="page-scroll">Sponsors</a></li>
 						</ul>
 					</nav>
 				</div>
@@ -224,7 +224,7 @@ h2.history-text::after {
 	</header>
 
 	<!-- EVENT INFO SECTION -->
-	<div class="container-fluid main" id="page-top">
+	<div class="container-fluid main" id="event-info">
 		<div class="row">
 			<div class="col-md-12 backg">
 				<div class="col-md-4 col-md-offset-4 inner col-xs-10 col-xs-offset-1 col-sm-6 col-sm-offset-3">
@@ -255,12 +255,12 @@ h2.history-text::after {
 					<h1 style="text-align:center;">Important! Please Bring Your Own Controller!</h1>
 
 						<h2 class="text-center info-text">Events</h2>
-							<ul>
-								<li>Super Smash Bros. Melee Singles / Doubles</li>
-								<li>Edmonton VS Calgary Crew battle</li>
-								<li>For Fun Side Event (TBA)</li>
-								<li>$1 Raffles for prizes at the event!</li>
-							</ul>
+							<!-- <ul> -->
+								<h3 style="text-align:center;">Super Smash Bros. Melee Singles / Doubles</h3>
+								<h3 style="text-align:center;">Edmonton VS Calgary Crew battle</h3>
+								<h3 style="text-align:center;">For Fun Side Event (TBA)</h3>
+								<h3 style="text-align:center;">$1 Raffles for prizes at the event!</h3>
+							<!-- </ul> -->
 
 			</div>
 		</div>
@@ -270,7 +270,7 @@ h2.history-text::after {
 
 
 		<!-- HISTORY SECTION -->
-		<div class="container-fluid history" id="section2">
+		<div class="container-fluid history" id="history">
 			<div class="container">
 				<div class="row" id="starts">
 					<div class="col-md-12 desc">
@@ -327,7 +327,7 @@ h2.history-text::after {
 		</div>
 
 	<!-- REGISTER/DONATE SECTION -->
-	<div class="container-fluid register" id="section3">
+	<div class="container-fluid register" id="participate">
 		<div class="container">
 			<div class="row">
 				<div class="col-md-12">
@@ -384,7 +384,7 @@ h2.history-text::after {
 
 
 	<!-- PHOTOS SECTION -->
-	<div class="container-fluid photos" id="section4">
+	<div class="container-fluid photos" id="photos">
 		<div class="container">
 			<div class="row">
 				<div class="col-md-12 col-sm-12 col-xs-12 photos-list">
@@ -418,7 +418,7 @@ h2.history-text::after {
 
 
 	<!-- CONTACT SECTION -->
-	<div class="container-fluid contact" id="section5">
+	<div class="container-fluid contact" id="sponsors">
 		<div class="container">
 			<div class="row">
 				<div class="col-md-12 desc">
@@ -502,7 +502,14 @@ h2.history-text::after {
 			zoom: 17,
 			mapTypeId: google.maps.MapTypeId.ROADMAP
 		}
-		var map = new google.maps.Map(mapCanvas, mapOptions)
+		var map = new google.maps.Map(mapCanvas, mapOptions);
+
+		var marker = new google.maps.Marker({
+    	position: {lat: 53.503698, lng: -113.487486},
+    	map: map,
+    	title: 'Tourney Location!'
+  	});
+
 	}
 	google.maps.event.addDomListener(window, 'load', initialize);
 	</script>
