--- a/index.html
+++ b/index.html
@@ -363,7 +363,14 @@ h2.history-text::after {
 						</div>
 						<div class="col-md-8 col-md-offset-2 col-sm-offset-1 col-sm-9 col-xs-12 icon-text-box">
 							<h4>Donate via Paypal</h4>
-							<p>Want to contribute to the cause but can't make it in person? You can always donate without attending the event!</p>
+							<p>Want to contribute to the cause but can't make it in person? You can always donate without attending the event!
+								<form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top">
+									<input type="hidden" name="cmd" value="_s-xclick">
+									<input type="hidden" name="hosted_button_id" value="S33NB6SZ32ASS">
+									<input type="image" src="https://www.paypalobjects.com/en_US/i/btn/btn_donateCC_LG.gif" border="0" name="submit" alt="PayPal - The safer, easier way to pay online!">
+									<img alt="" border="0" src="https://www.paypalobjects.com/en_US/i/scr/pixel.gif" width="1" height="1">
+								</form>
+							</p>
 						</div>
 					</div>
 				</div>
