lists do not show up nicely on mobile...

--- a/index.html
+++ b/index.html
@@ -263,24 +263,21 @@ h3.event {
 				<div class="col-md-12 col-sm-12 col-xs-12 info desc">
 					<h2 class="text-center info-text">Event Info</h2>
 					<p>Super Smash Bros University [SSBU] welcomes everyone to come to our fundraiser Smash Bros tournament for the Autism Society of Edmonton Area in memory of Jarrett "Solaris" Bortscher.</p>
-					<ul>
-						<li><h4 class="byoc">IMPORTANT: PLEASE BRING YOUR OWN CONTROLLER!</h4></li>
-						<li><h4>Date:</h4> March 12, 2016</li>
-						<li><h4>Time:</h4> 10:00 AM</li>
-						<li><h4>Location:</h4> The Church at South Edmonton - 9910 67 Ave NW, T6E 0P5</li>
-						<li><h4>Cost:</h4> <ul>
-							<li>$15 entry fee per person minimum</li>
-							<li>$5 for venue</li>
-							<li>$10+ for donation</li>
-						</ul>
-					</li>
-				</ul>
+					<br />
+					<div class="col-md-offset-2 col-sm-offset-1 col-md-8 col-sm-10 col-xs-12" style="margin-bottom: 40px;">
+					<h4 class="byoc">IMPORTANT: PLEASE BRING YOUR OWN CONTROLLER!</h4><br />
+					<h4>Date:</h4> March 12, 2016<br />
+					<h4>Time:</h4> 10:00 AM<br />
+					<h4>Location:</h4> The Church at South Edmonton - 9910 67 Ave NW, T6E 0P5<br />
+					<h4>Cost:</h4>
+					$15 entry fee per person minimum; $5 for venue; $10+ for donation<br /></div>
 
-				<div id="map-canvas"></div>
 
-				<br />
+					<div id="map-canvas"></div>
 
-				<h2 class="text-center info-text">Events</h2>
+					<br />
+
+					<h2 class="text-center info-text">Events</h2>
 				<!-- <ul> -->
 				<h3 class="event">Super Smash Bros. Melee Singles / Doubles</h3>
 				<h3 class="event">Edmonton vs. Calgary Crew battle</h3>
